# ai-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.yaml
.cursor/rules/: project-rules-about-env.mdc
.github/workflows/: deploy.yml
Yata/: README.md  main.py  requirements.txt
Yata/agents/: agent.py
Yata/cogs/: echo.py  recording.py
Yata/utils/: google_docs_utils.py  meeting_minutes.py  oauth_server.py
Yata_legacy/: main.py
Yata_legacy/cogs/: echo.py  recording.py
scripts/: startup-install-docker.sh
yata-agent/: README.ja.md  README.md  pyproject.toml
yata-agent/plan-docs/: SETUP.md  plan-1.md  plan-2.md  plan-3.md
yata-agent/src/: container.py  main.py
yata-agent/src/cogs/: auth_cog.py  recording_cog.py  setup_cog.py  status_cog.py
yata-agent/src/data/: database.py  database_interface.py
yata-agent/src/services/: audio_service.py  audio_service_interface.py  database_service.py  google_service.py  google_service_interface.py  processing_service.py  readiness_service.py  transcription_service.py  transcription_service_interface.py
yata-agent/src/utils/: meeting_minutes.py  messages.py
yata-agent/tests/test_cogs/: test_auth_cog.py  test_recording_cog.py  test_setup_cog.py  test_status_cog.py
yata-agent/tests/test_data/: test_database.py
yata-agent/tests/test_main/: test_health.py  test_oauth_callback.py
yata-agent/tests/test_services/: test_audio_service.py  test_database_service.py  test_google_service.py  test_processing_service.py  test_readiness_service.py  test_transcription_service.py
(+5 files in other folders)
